add: 웹소켓 관련 URL 인증 pass 처리